# rrbot

./: .gitignore  CMakeLists.txt  README.md  env.sh  requerments.txt
examples/di/: demo1.py  demo2.py
examples/graph/: demo2.py  demo3.py  demo4.py  demo5.py  demo6.py
examples/plot/: plot1.py  plot3.py  plot_2.py
examples/py_ga/: demo1.py
examples/tk_tutorial/: hello_tk.py  tk_async.py  tk_async1.py
gz/: CMakeLists.txt
gz/models/rbbot/: model.config  rrbot.sdf  rrbot.sdf.xacro
gz/models/rrbot/: model.config  rrbot.sdf  rrbot.sdf.xacro
gz/plugins/: CMakeLists.txt
gz/plugins/joint_force/: joint_force.cpp  joint_force.hpp
gz/plugins/joint_position/: joint_position.cpp  joint_position.hpp
gz/plugins/joint_velocity/: joint_velocity.cpp  joint_velocity.hpp
gz/worlds/: rrbot.world
rrbot_description/models/rrbot/: model.config  model.sdf
rrbot_gazebo/: CMakeLists.txt
rrbot_gazebo/plugins/: joint_position.cc
rrbot_gazebo/worlds/: rrbot.sdf
src/: di.py  log.json  main.py
src/controllers/: main_ctl.py
src/models/: demo.py  pose.py  test_model.py
src/utils/: observer.py
src/views/: main_vw.py
tests/robotics/: test_convert.py
tools/: xacro2sdf.py
tools/helpers/: color.xacro  common.xacro  sensors.xacro
