cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(GAZEBO_PLUGIN_DEMO)

find_package(gazebo REQUIRED)
include_directories(${GAZEBO_INCLUDE_DIRS})
link_directories(${GAZEBO_LIBRARY_DIRS})
list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
message("-----------")
message(${PROJECT_SOURCE_DIR})
message("-----------")
add_library(joint_position_plugin SHARED plugins/joint_position.cc)
target_link_libraries(joint_position_plugin ${GAZEBO_LIBRARIES})

set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}")
install(TARGETS joint_position_plugin DESTINATION bin)
